--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.2.3",
     "clsx": "^1.2.1",
     "font-awesome": "^4.7.0",
+    "immer": "^9.0.19",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
